--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Pages: 250</li>
                 <!-- <li>Price: $14.99</li> -->
             </ul>
-            <a href="buynow.html"><button id="buy-button">Buy Now</button></a>
+            <!-- <a href="buynow.html"><button id="buy-button">Buy Now</button></a> -->
             
         </section>
         
